cli/tests/testdata/fetch_async_error_stack.ts.out
error: Uncaught (in promise) TypeError: NetworkError when attempting to fetch resource.
await fetch("file:///nonexistent");
^[WILDCARD]
    at async fetch (deno:[WILDCARD])
    at async file:///[WILDCARD]/fetch_async_error_stack.ts:1:1
